--- a/style.css
+++ b/style.css
@@ -1,22 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap");
 .icons {
   position: relative;
   top: 250px;
   left: 150px;
-  display: flex;
+  display: inline-flex;
+  justify-items: center;
   gap: 30px;
-
+  font-family: "Protest Strike", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.icons a {
+  text-decoration: none;
 }
 .icons a .layer {
   width: 55px;
   height: 55px;
   transition: transform 0.3s;
   position: relative;
+  display: inline-block;
+}
+.layer_name {
+  margin-top: 15px;
+  opacity: 0;
+  transition: all 0.3s;
+}
+.layer_name .name:not(.facebook) {
+  margin-left: 5px;
 }
 .icons a:hover .layer {
   transform: rotate(-35deg) skew(20deg);
 }
+.icons a:hover .layer_name {
+  opacity: 1;
+}
+
 .icons a .layer span {
-  border: 2px solid  ;
+  border: 2px solid;
   position: absolute;
   top: 0;
   left: 0;
@@ -24,7 +44,6 @@
   width: 55px;
   border-radius: 5px;
   transition: all 0.3s;
-  
 }
 .icons a .layer span .bx {
   font-size: 60px;
@@ -45,4 +64,14 @@
 .icons a:hover .layer span:nth-child(4) {
   opacity: 0.8;
   transform: translate(15px, -15px);
+}
+.ahmadreza {
+  position: absolute;
+  top: -200px;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+.icons a:hover {
+  opacity: 0.9;
+  top: -100px;
 }
